[tool.poetry]
name = "pybotics"
version = "0.0.0"
description = "Python Toolbox for Robotics"
authors = ["Nicholas Nadeau <nicholas.nadeau@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/engnadeau/pybotics"
repository = "https://github.com/engnadeau/pybotics"
documentation = "https://github.com/engnadeau/pybotics"
keywords = ["robot", "research", "automation", "kinematics", "geometry"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Robot Framework :: Library",
    "Framework :: Robot Framework :: Tool",
    "Framework :: Robot Framework",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Education",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development",
    "Topic :: System :: Hardware",
    "Topic :: System",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
attrs = ">=19.0"
numpy = "^1.20"
scipy = "^1.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "^5.2.1"
flake8 = "^3.8.3"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
hypothesis = "^5.26.0"
isort = "^5.4.2"
jupyter_contrib_nbextensions = "^0.5.1"
matplotlib = "^3.3.1"
mccabe = "^0.6.1"
mypy = "^0.782"
notebook = "^6.4.10"
pandas = "^1.1.0"
pep8-naming = "^0.11.1"
pydocstyle = "^5.0.2"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-randomly = "^3.4.1"
pytest-runner = "^5.2"
rope = "^0.17.0"
scikit-learn = "^0.23.2"
sphinx = "^3.2.1"
sphinx-autobuild = "^0.7.1"
sphinx-rtd-theme = "^0.5.0"
sphinxcontrib-apidoc = "^0.3.0"
vulture = "^2.0"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
