[metadata]
name = pybotics
url = https://github.com/nnadeau/pybotics

author = Nicholas Nadeau
author_email = nicholas.nadeau@gmail.com

license_file = LICENSE
license = MIT

description = Python Toolbox for Robotics
long_description_content_type = text/markdown
long_description = file:
    README.md
    CHANGELOG.md
    LICENSE

setup_requires =
    setuptools
    setuptools_scm
install_requires = file: requirements.txt
tests_require = pytest

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Manufacturing
    Intended Audience :: Science/Research
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
keywords =
    python
    robot
    robotics
    research
    automation
    kinematics
    geometry

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[options]
zip_safe = False
include_package_data = True
packages = find:
